[project]
name = "metrosense-backend"
version = "0.1.0"
description = "MetroSense backend API — FastAPI + PostgreSQL + ADK orchestration"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "bcrypt<4",
  "passlib[bcrypt]>=1.7",
  "pyjwt>=2.9",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "import-linter>=2.0",
  "types-passlib>=1.7",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Services do not import from API"
type = "forbidden"
source_modules = ["app.services"]
forbidden_modules = ["app.api"]

[[tool.importlinter.contracts]]
name = "DB does not import from services or API"
type = "forbidden"
source_modules = ["app.db"]
forbidden_modules = ["app.services", "app.api"]
